--- a/A1 GAESTION COMMERCIAL/My Project/Resources.resx
+++ b/A1 GAESTION COMMERCIAL/My Project/Resources.resx
@@ -316,6 +316,9 @@
   <data name="CANCEL 22" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CANCEL 22.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SUB14" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SUB14.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="iconfinder_agt_print_3826 (1)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconfinder_agt_print_3826 (1)1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -336,6 +339,9 @@
   </data>
   <data name="iconfinder_edit_3218" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconfinder_edit_3218.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bgForm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bgForm.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="gui-04" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gui-04.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -364,7 +370,7 @@
   <data name="iconfinder_pdf_3745 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconfinder_pdf_3745 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="SUB14" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SUB14.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bgLightForm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bgLightForm.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
