--- a/A1 GAESTION COMMERCIAL/Controles/ParcList.resx
+++ b/A1 GAESTION COMMERCIAL/Controles/ParcList.resx
@@ -117,4 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Label22.Text" xml:space="preserve">
+    <value>MS: Mission    -    CLN: Client     -     CH: Chauffeur    -    CHR: Charge    -    VH: Vehicule      -   DP: Depart      -      DS: Destination     -    RG: Regle      -      ST: Status   -    EDT: Editeur   -   EX: Exercice</value>
+  </data>
 </root>
